--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -40,16 +40,16 @@
 				})
 			});
 		</script>
-		<link rel="icon" href="img1/favicon/favicon.html" type="image/x-icon" />
+		<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
 		<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
-		<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" th:href="@{/css1/minified.css}">
 		<script>
 			window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');
 		</script>
-		<script src="js1/modernizr.min.js"></script>
+		<script th:src="@{/js1/modernizr.min.js}"></script>
 		<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
 		<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
 		<link th:href="@{/css1/flexslider.css}" rel="stylesheet" />
@@ -349,5 +349,5 @@
 		<!-- //smooth scrolling -->
 
 	</body>
-		<script src="js1/minified.js"></script>
+		<script th:src="@{/js1/minified.js}"></script>
 </html>
