--- a/src/main/resources/templates/buy.html
+++ b/src/main/resources/templates/buy.html
@@ -36,7 +36,7 @@
 	}
 </style>
 <body>
-	<!--头部  -->
+		<!--头部  -->
 			<header id="site-header" role="banner">
 				<!-- HEADER TOP -->
 				<div class="header-top">
@@ -66,38 +66,12 @@
 										</div>
 										<!-- // SEARCH BOX -->
 									</li>
-									<li data-toggle="sub-header" data-target="#sub-social">
-										<!-- SOCIAL ICONS -->
-										<a href="javascript:void(0);" id="social-icons">
-											<i class="iconfont-share round-icon"></i>
-										</a>
-
-										<div id="sub-social" class="sub-header">
-											<ul class="social-list unstyled text-center">
-												<li>
-													<a href="#"><i class="iconfont-facebook round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-twitter round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-google-plus round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-pinterest round-icon"></i></a>
-												</li>
-												<li>
-													<a href="#"><i class="iconfont-rss round-icon"></i></a>
-												</li>
-											</ul>
-										</div>
-										<!-- // SOCIAL ICONS -->
-									</li>
 									<li data-toggle="sub-header" data-target="#sub-cart">
 										<!-- SHOPPING CART -->
-										<a href="javascript:void(0);" id="total-cart">
+										<a th:href="@{/customer/look}" id="total-cart">
 											<i class="iconfont-shopping-cart round-icon"></i>
 										</a>
+										<!-- // SHOPPING CART -->
 									</li>
 								</ul>
 							</div>
