--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -307,13 +307,14 @@
 					});
 				</script>
 			</div>
+			
 			<main id="main-content" role="main">
-				<!--  活动套餐推荐-->
+				<!--  活动推荐-->
 				<section class="section featured visible-items-4">
 					<div class="container">
 						<div class="row">
 							<header class="section-header clearfix col-sm-offset-3 col-sm-6">
-								<h3 class="section-title">活动套餐推荐</h3>
+								<h3 class="section-title">活动推荐</h3>
 								<p class="section-teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit ac lobortis lacus</p>
 							</header>
 
@@ -330,20 +331,17 @@
 								</div>
 
 								<div class="owl-carousel owl-theme" data-visible-items="4" data-navigation="true" data-lazyload="true">
-									<div class="product" data-product-id="1">
+									<div class="product" data-product-id="1" th:each="item : ${productlist}">
 										<div class="entry-media">
-											<img th:src="@{/images/women/basic/848051-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
+											<img th:src="${item.pplist[0].pro.ilist[0].url}" alt="" class="lazyOwl thumb img" />
 											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
+												<a th:href="@{/xjb_productController}" class="entry-url"></a>
 												<ul class="icons unstyled">
 													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
+														<div class="circle ribbon ribbon-new">New</div>
 													</li>
 													<li>
-														<a href="images/women/basic/848051-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
+														<a th:href="${item.pplist[0].pro.ilist[0].url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
 													</li>
 												</ul>
 												<div class="rate-bar">
@@ -354,141 +352,14 @@
 										</div>
 										<div class="entry-main">
 											<h5 class="entry-title">
-											<a href="#">套餐一</a>
+											<a href="#" th:text="${item.pname}">套餐一</a>
 										</h5>
 											<div class="entry-price">
-												<s class="entry-discount">￥ 350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
+												<strong class="accent-color price" th:text="'￥'+${item.price}">￥ 250.00</strong>
 											</div>
 
 										</div>
 									</div>
-
-									<div class="product" data-product-id="2">
-										<div class="entry-media">
-											<img th:src="@{/images/women/basic/688086-0286_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/women/basic/688086-0286_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4" step="0.5" id="backing2" />
-													<div class="rateit" data-rateit-backingfld="#backing2" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐二</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-
-										</div>
-									</div>
-
-									<div class="product" data-product-id="3">
-										<div class="entry-media">
-											<img th:src="@{/images/women/basic/848099-0067_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-new">New</div>
-													</li>
-													<li>
-														<a href="images/women/basic/848099-0067_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="3.5" step="0.5" id="backing3" />
-													<div class="rateit" data-rateit-backingfld="#backing3" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐三</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 450.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="4">
-										<div class="entry-media">
-											<img th:src="@{/images/women/basic/589550-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<a href="images/women/basic/589550-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="5" step="0.5" id="backing4" />
-													<div class="rateit" data-rateit-backingfld="#backing4" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐四</a>
-										</h5>
-											<div class="entry-price">
-												<strong class="price">￥ 350.00</strong>
-											</div>
-										</div>
-									</div>
-
-									<div class="product" data-product-id="5">
-										<div class="entry-media">
-											<img th:src="@{/images/women/legging/104331-0014_1_t.jpg}" alt="" class="lazyOwl thumb" />
-											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
-												<ul class="icons unstyled">
-													<li>
-														<div class="circle ribbon ribbon-sale">Sale</div>
-													</li>
-													<li>
-														<a href="images/women/legging/104331-0014_1.jpg" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
-													</li>
-													<li>
-														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart"></i></a>
-													</li>
-												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing5" />
-													<div class="rateit" data-rateit-backingfld="#backing5" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
-											</div>
-										</div>
-										<div class="entry-main">
-											<h5 class="entry-title">
-											<a href="#">套餐五</a>
-										</h5>
-											<div class="entry-price">
-												<s class="entry-discount">￥ 350.00</s>
-												<strong class="accent-color price">￥ 250.00</strong>
-											</div>
-										</div>
-									</div>
-
-
 								</div>
 
 							</div>
