--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1067,7 +1067,7 @@
 				})
 				usermainorder.olist=ordersons;
 		 		 $.ajax({
-					url:"/order/insertOrder",
+					url:"/order/insertOrder1",
 					type:"post",
 					dataType:"json",
 					data:JSON.stringify(usermainorder),
