--- a/src/main/resources/templates/Qt_product_Xq.html
+++ b/src/main/resources/templates/Qt_product_Xq.html
@@ -1,52 +1,30 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html class="noIE" lang="en-US" xmlns:th="http://www.thymeleaf.org"><!--<![endif]-->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8" />
-	<title>GFashion - Responsive e-commerce HTML Template</title>
-	<meta name="description" content=""/>
-	<meta name="keywords" content=""/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
-	<!-- Favorite Icons -->
-	<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/i/mg1/favicon/apple-touch-icon-144x144-precomposed.html}">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
-	<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
-	<!-- // Favorite Icons -->
-	
-	
-	
-	<!-- GENERAL CSS FILES -->
-	<link rel="stylesheet" th:href="@{/css1/minified.css}">
-
-
-	<script src="/js1/modernizr.min.js"></script>	
-	<!-- PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" th:href="@{/css1/jquery.nouislider.css}">
-	<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
-	<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
-	<link rel="stylesheet" th:href="@{/css1/innerpage.css}">
-	<!-- // PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" th:href="@{/css1/responsive.css}">
-	
-	<style type="text/css">
-		.product-preview .thumbs > li > a {
-		    display: block;
-		    width: 103px;
-		    height: 70px;
-		    border: 3px solid #919191;
-		    border-radius: 50%;
-		    overflow: hidden;
-		    margin-top: 10px;
-		}
-	</style>
-</head>
-<body class="product-single">
-	
-		<header id="site-header" role="banner">
+		<meta charset="UTF-8" />
+		<title>研学旅行官网</title>
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
+		<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
+		<link rel="stylesheet" th:href="@{/css1/minified.css}">
+		<script th:src="@{/js1/modernizr.min.js}"></script>
+		<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
+		<link rel="stylesheet" th:href="@{/css1/owl.theme.css}">
+		<script th:src="@{/js1/jquery.min.js}"></script>
+		<link th:href="@{/css1/flexslider.css}" rel="stylesheet" />
+		<link rel="stylesheet" th:href="@{/css1/responsive.css}">
+		
+		<style type="text/css">
+			
+		</style>
+		
+	</head>
+<body>
+	<header id="site-header" role="banner">
 		<!-- HEADER TOP -->
 		<div class="header-top">
 			<div class="container">
@@ -194,141 +172,47 @@
 					<!-- // SITE NAVIGATION MENU -->
 				</div>
 			</div>
-		</div>
+		</div> 
 		<!-- // MAIN HEADER -->
 	</header>
 	
     
-	<!-- PAGE WRAPPER -->
-<div id="page-wrapper">
-		
-		<!-- SITE MAIN CONTENT -->
-		<main id="main-content" role="main">
-					
-			<section class="section">
-				<div class="container">
-					<div class="row">
-						<!-- PRODUCT PREVIEW -->
-						<div class="col-xs-12 col-sm-4">
-							
-							<div class="product-preview">
-								<div class="big-image">
-									<a href="" data-toggle="lightbox">
-										<img th:src="'/'+${list.ilist[0].url}" alt="" />
-									</a>
+		<div>
+		<div style="text-align: center;">
+			<h3 th:text="${product.pname}"></h3>
+			<h5 th:text="${product.content}"></h5>
+		</div>
+		<div class=" owl-theme" data-visible-items="4" data-navigation="true" data-lazyload="true">
+									<div class="product" data-product-id="1" th:each="item : ${product.pplist}">
+										<div class="entry-media">
+											<img th:src="'/'+${item.pro.ilist[0].url}" alt="" class="lazyOwl thumb" />
+											<div class="hover">
+												<ul class="icons unstyled">
+													<li>
+														<a th:src="'/'+${item.pro.ilist[0].url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
+													</li>
+												</ul> 
+												<div class="rate-bar">
+													<div class="rateit" data-rateit-backingfld="#backing1" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
+												</div>
+											</div>
+										</div>
+										<div class="entry-main">
+											<h5 class="entry-title">
+											
+											<a th:href="@{/xjb_projectController/queryBy_Qt_Xq(id=${item.pro.id})}" th:text="${item.pro.pname}"></a>
+										</h5>
+											<div class="entry-price">
+												<strong class="accent-color price" th:text="${'￥'+item.pro.price}"></strong>
+											</div>
+
+										</div>
+									</div>
+
+									
+
 								</div>
-								<ul class="thumbs unstyled clearfix">
-									<li th:if="${#lists.size(list.ilist)} > 1 "><a href=""><img th:src="'/'+${list.ilist[1].url}" alt=""/></a></li>
-									<li th:if="${#lists.size(list.ilist)} > 2 "><a href=""><img th:src="'/'+${list.ilist[2].url}" alt=""/></a></li>
-								</ul>
-							</div>
-							
-						</div>
-						<!-- // PRODUCT PREVIEW -->
-						<div class="space40 visible-xs"></div>
-						<!-- PRODUCT DETAILS -->
-						<div class="col-xs-12 col-sm-8">
-							<section class="product-details add-cart">
-								<header class="entry-header">
-									<h2 class="entry-title uppercase" th:text="${list.pname}"></h2>
-								</header>
-								<article class="entry-content">
-									<figure>
-										<span class="entry-price inline-middle" th:text="'￥'+${list.price}"></span>
-										<!-- <div class="rate-bar inline-middle">
-											<input type="range" value="4.5" step="0.5" id="backing0" />
-											<div class="rateit" data-rateit-backingfld="#backing0" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false"  data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-										</div> -->
-										
-										<div class="clearfix"></div>
-										
-										<figcaption class="m-b-sm">
-											<h5 class="subheader uppercase">介绍</h5>
-											<p th:text="${list.description}"></p>
-										</figcaption>
-										<figcaption class="m-b-sm">
-											<h5 class="subheader uppercase">注意事项</h5>
-											<p th:text="${list.remark}"></p>	
-										</figcaption><!-- 
-										<div id="kehu_xinxi">
-											<div>
-												<span>团队/个人</span><br>
-												<span>团队</span>
-												<input type="radio" name="dd_radio" data="dd_radio" style="width: 15px;height: 15px;"/>
-												<span style="margin-left: 20px;">个人</span>
-												<input type="radio" name="dd_radio" data="gr_radio" style="width: 15px;height: 15px;"/>
-											</div>
-											<div hidden="hidden" id="hide_dd">
-												<span style="margin-top: 20px;">请输入负责人</span><input type="text" style="margin-left: 20px;height: 30px;margin-top: 20px;"/><br>
-												s<button class="btn btn-primary" data-toggle="modal" data-target="#xz_ddry" style="margin-top: 20px;">填写团队人员</button>
-											</div>
-											<div hidden="hidden" id="hide_ry">
-												<span>请输入姓名</span>
-												<input type="text" style="height: 30px;"/><br>
-												<span>请输入年龄</span>
-												<input type="text" style="height: 30px;"/>
-											</div>
-										</div> -->
-										
-										<ul class="inline-li li-m-r-l m-t-lg">
-											<li>
-												<a href="#" class="btn btn-default btn-lg btn-round add-to-cart">加入购物车</a>
-											</li>
-										</ul>
-										
-									</figure>
-								</article>
-							</section>
-						</div>
-						<!-- // PRODUCT DETAILS -->
-					</div>
-					
-			</section>
-			
-		</main>
-		
-</div>
-<div class="modal fade" id="xz_ddry" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h4 class="modal-title" id="myModalLabel">填写团队人员</h4>
-					</div>
-					<div class="modal-body">
-						<table class="table table-bordered">
-							<thead>
-								<tr>
-									<th>姓名</th>
-									<th>年龄</th>
-									<th></th>
-								</tr>
-							</thead>
-							<tbody id="ry_tb_body">
-								<tr class="ry_tb_body_tr">
-									<td><input type="text" style="height: 100%;width: 100%;"></td>
-									<td><input type="text" name="" id="" value="" style="height: 100%;width: 100%;"/></td>
-									<td>
-										<a href="javascript:void(0)" style="color: red;" id="yc">移除</a>&nbsp;&nbsp;
-										<a href="javascript:void(0)" id="tj">添加</a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-						<button type="button" class="btn btn-primary">提交</button>
-					</div>
-				</div>
-				<!-- /.modal-content -->
 			</div>
-			<!-- /.modal -->
-	</div>
-<!-- // PAGE WRAPPER -->
-
-
-			
 		<!-- SITE FOOTER -->
 	<footer class="page-footer">
 		
@@ -497,74 +381,5 @@
 		</div>
 		
 	</footer>
-	<!-- // SITE FOOTER -->
-
-<!-- Essential Javascripts -->
-<script th:src="@{/js1/minified.js}"></script>
-<!-- // Essential Javascripts -->
- <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
-<!-- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../../../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-27646173-3', 'themina.net');
-  ga('send', 'pageview');
-
-</script> -->
-	<!-- Particular Page Javascripts -->
-	<script th:src="@{/js1/jquery.nouislider.js}"></script>
-	<script th:src="@{/js1/owl.carousel.js}"></script>
-	<script th:src="@{/js1/products.js}"></script>
-	
-	<!-- // Particular Page Javascripts -->
-	
-	<!-- Disqus -->
-	<!-- <script type="text/javascript">
-	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = 'gfashion';		// required: replace example with your forum shortname
-
-	/* * * DON'T EDIT BELOW THIS LINE * * */
-	(function() {
-		var dsq = document.createElement('script'); dsq.async = true;
-		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	})();
-	</script> -->
-	<!-- // Disqus -->
-	
-	<script type="text/javascript">
-	$(function(){
-		$("[type=submit]").click(function(){
-			location.href="orders.html";
-		})
-		$("#tj").click(function(){
-			var new_sj=$(this).parents("tr").clone(true);
-			new_sj.find("[type=text]").val("");
-			$("#ry_tb_body").append(new_sj);
-		})
-		$("#yc").click(function(){
-			var tr_length=$(".ry_tb_body_tr").length;
-			if(tr_length==1){
-				alert("已经是最后一个了,不能删除");
-			}else{
-				$(this).parents("tr").remove();
-			}
-		});
-		$("[data=dd_radio]").click(function(){
-			if(true){
-				$("#hide_dd").show();
-			}
-			$("#hide_ry").hide();
-		});
-		$("[data=gr_radio]").click(function(){
-			if(true){
-				$("#hide_ry").show();
-			}
-			$("#hide_dd").hide();
-		});
-	})
-</script>
 </body>
 </html>
