--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -298,10 +298,6 @@
 														<a href="#" class="circle add-to-cart"><i class="iconfont-shopping-cart lbshop" th:iid="${item.id}"></i></a>
 													</li>
 												</ul>
-												<!-- <div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing1" />
-													<div class="rateit" data-rateit-backingfld="#backing1" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false"  data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div> -->
 											</div>
 										</div>
 										<div class="entry-main">
@@ -313,8 +309,7 @@
 												<p th:text="${item.description}"></p>
 											</div>
 											<div class="entry-price">
-												<s class="entry-discount" th:text="'￥'+${item.price}"></s>
-												<strong class="accent-color price">$ 250.00</strong>
+												<strong class="accent-color price" th:text="'￥'+${item.price}">$ 250.00</strong>
 												<!-- <a href="#" class="btn btn-round btn-default add-to-cart visible-list">Add to Cart</a> -->
 											</div>
 										</div>
