--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -335,7 +335,7 @@
 										<div class="entry-media">
 											<img th:src="${item.pplist[0].pro.ilist[0].url}" alt="" class="lazyOwl thumb img" />
 											<div class="hover">
-												<a th:href="@{/xjb_productController}" class="entry-url"></a>
+												<a th:href="@{/xjb_productController/QueryQtproductByXq(id=${item.id})}" class="entry-url"></a>
 												<ul class="icons unstyled">
 													<li>
 														<div class="circle ribbon ribbon-new">New</div>
