--- a/src/main/resources/templates/GoodOrderAdd.html
+++ b/src/main/resources/templates/GoodOrderAdd.html
@@ -196,8 +196,8 @@
 											ps.push(vps);
 										}
 									})
-									
-									$.ajax({
+									console.log(JSON.stringify(ps));
+									/* $.ajax({
 										url:"/menu/orderadd",
 										data:JSON.stringify(ps),
 										type:"post",
@@ -207,7 +207,7 @@
 											alert(result);
 											window.location.reload();
 										}
-									})
+									}) */
 								})
 								
 								
