--- a/src/main/resources/templates/GoodOrderAdd.html
+++ b/src/main/resources/templates/GoodOrderAdd.html
@@ -196,8 +196,7 @@
 											ps.push(vps);
 										}
 									})
-									console.log(JSON.stringify(ps));
-									/* $.ajax({
+									$.ajax({
 										url:"/menu/orderadd",
 										data:JSON.stringify(ps),
 										type:"post",
@@ -207,8 +206,8 @@
 											alert(result);
 											window.location.reload();
 										}
-									}) */
-								})
+									}) 
+								}) 
 								
 								
 									function zj(){
