--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -193,8 +193,8 @@
 							</tr>
 							<tr th:each="item,index : ${list}"  th:if="${item.typeid==1}">
 								<td>
-									<a class="entry-thumbnail" th:href="${item.ix.ilist[0].url}" data-toggle="lightbox">
-										<img th:src="${item.ix.ilist[0].url}" alt="" class="img"/>
+									<a class="entry-thumbnail" th:href="'/'+${item.ix.ilist[0].url}" data-toggle="lightbox">
+										<img th:src="'/'+${item.ix.ilist[0].url}" alt="" class="img"/>
 									</a>
 									<a class="entry-title" th:href="@{/xjb_projectController/queryBy_Qt_Xq(id=${item.ix.id})}" th:text="${item.ix.pname}"></a><span class="taocan">(项目)</span>
 								</td>
@@ -548,7 +548,7 @@
 		$("#xiadan").click(function(){
 			var type=$("[name='per']:checked").val();
 			var umorder={};
-			umorder.orderuser=12;
+			umorder.orderuser=2;
 			umorder.name1="未付款";
 			umorder.name2=type;
 			if($(".qty-btn-group").length==0){
