--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -333,7 +333,7 @@
 								<div class="owl-carousel owl-theme" data-visible-items="4" data-navigation="true" data-lazyload="true">
 									<div class="product" data-product-id="1" th:each="item : ${productlist}">
 										<div class="entry-media">
-											<img th:src="${item.pplist[0].pro.ilist[0].url}" alt="" class="lazyOwl thumb img" />
+											<img th:src="'/'+${item.pplist[0].pro.ilist[0].url}" alt="" class="lazyOwl thumb img" />
 											<div class="hover">
 												<a th:href="@{/xjb_productController}" class="entry-url"></a>
 												<ul class="icons unstyled">
@@ -341,13 +341,10 @@
 														<div class="circle ribbon ribbon-new">New</div>
 													</li>
 													<li>
-														<a th:href="${item.pplist[0].pro.ilist[0].url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
+														<a th:href="'/'+${item.pplist[0].pro.ilist[0].url}" class="circle" data-toggle="lightbox"><i class="iconfont-search"></i></a>
 													</li>
 												</ul>
-												<div class="rate-bar">
-													<input type="range" value="4.5" step="0.5" id="backing1" />
-													<div class="rateit" data-rateit-backingfld="#backing1" data-rateit-starwidth="12" data-rateit-starheight="12" data-rateit-resetable="false" data-rateit-ispreset="true" data-rateit-min="0" data-rateit-max="5"></div>
-												</div>
+												
 											</div>
 										</div>
 										<div class="entry-main">
