--- a/src/main/resources/templates/insert_project.html
+++ b/src/main/resources/templates/insert_project.html
@@ -355,7 +355,7 @@
 						alert(a[i])
 					}
 					console.log(formData);
-				   /*  $.ajax({
+				   $.ajax({
 						url:"project_insert",
 						type:"post",
 						data:formData,
@@ -369,7 +369,7 @@
 							}
 							
 						}
-					});   */  
+					});   
 				
 				 
 			})
